--- a/trunk/NLPP/web/css/style.css
+++ b/trunk/NLPP/web/css/style.css
@@ -565,24 +565,18 @@ footer .aligncenter {
 	#newsletter-form1 fieldset {
 		background:url(../images/newsletter-bg.gif) ;
 		width:219px;
-		height:180px;
+		height:200px;
 		overflow:hidden;
 	}
 	#newsletter-form1 .rowElem {
 		padding:13px 19px 0 17px;
 	}
-	#newsletter-form1 input {
-		border:1px solid #0086b5;
-		background:#fff;
-		color:#8e8e8e;
-		font-size:.857em;
-		padding:2px 5px 2px 5px;
-		width:171px;
-		margin-bottom:13px;
-	}
 	#newsletter-form1 h2 {
 		color:#fff;
 		margin-bottom:13px;
+	}
+        #newsletter-form1 label {
+		color:#FF033E;
 	}
 	#newsletter-form1 a.fleft {
 		color:#fff;
@@ -608,7 +602,7 @@ footer .aligncenter {
 	#newsletter-form2 fieldset {
 		background:url(../images/newsletter-bg.gif) ;
 		width:219px;
-		height:131px;
+		height:140px;
 		overflow:hidden;
 	}
 	#newsletter-form2 .rowElem {
