--- a/trunk/NLPP/web/css/style.css
+++ b/trunk/NLPP/web/css/style.css
@@ -537,7 +537,7 @@ footer .aligncenter {
 		margin-bottom:13px;
 	}
         #newsletter-form label {
-		color:#FF033E;
+		color:#CC0000;
 	}
 	#newsletter-form a.fleft {
 		color:#fff;
@@ -576,7 +576,7 @@ footer .aligncenter {
 		margin-bottom:13px;
 	}
         #newsletter-form1 label {
-		color:#FF033E;
+		color:#CC0000;
 	}
 	#newsletter-form1 a.fleft {
 		color:#fff;
