--- a/trunk/NLPP/web/css/niceforms-default.css
+++ b/trunk/NLPP/web/css/niceforms-default.css
@@ -12,13 +12,13 @@ float:left;
 clear:both;
 }
 fieldset { border:none; clear:both;}
-label {font-size:11px; font-weight:bold; color:#666;}
+label {font-size:11px; font-weight:bold; color:#FF033E;}
 label a{font-size:11px; font-weight:bold; color:#666;}
 dl {clear:both; width:600px;}
-dl.submit {clear:both; width:500px; text-align:center; padding:0 0 0 90px;}
+dl.submit {clear:both; width:500px; text-align:center; padding:0 0 0 0;}
 
-dt {float:left; text-align:right; width:170px; line-height:34px; padding:0 10px 10px 0;}
-dd {float:left; width:400px; margin:0 0 10px 0;}
+dt {float:left; text-align:right; width:100px; line-height:34px; padding:0 10px 10px 0;}
+dd {float:left; width:300px; margin:0 25px 10px;}
 
 
 label.check_label{
