--- a/NLPP/web/css/niceforms-default.css
+++ b/NLPP/web/css/niceforms-default.css
@@ -18,7 +18,9 @@ dl {clear:both; width:600px;}
 dl.submit {clear:both; width:500px; text-align:center; padding:0 0 0 0;}
 
 dt {float:left; text-align:right; width:100px; line-height:34px; padding:0 10px 10px 0;}
-dd {float:left; width:300px; margin:0 25px 10px;}
+dt1 {float:left; text-align:right; width:170px; line-height:34px; padding:0 10px 10px 0;}
+dd {float:left; width:280px; margin:0 25px 10px;}
+dd1 {float:left; width:200px; margin:0 25px 10px;}
 
 
 label.check_label{
